# dt-blog-automation

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  dev-shell.ps1  index.html  package-lock.json  package.json  pyproject.toml  railway.toml  render.yaml  run-api.bat  run-api.ps1  run-blog-agent.ps1  run-daily.ps1  run-ui.ps1  run_daily.sh  vite.config.js
content/posts/: 2026-03-26-can-your-towel-cause-acne-what-to-know-about-face-drying-habits.md  2026-03-26-how-often-change-face-towel-acne-prone-skin.md  2026-03-26-how-to-dry-your-face-without-irritating-acne.md  2026-03-26-jawline-breakouts-after-washing-face-towel-friction.md  2026-03-26-towel-bacteria-face-hygiene-step.md  2026-03-28-what-towel-is-best-for-acne-prone-skin.md  2026-03-29-why-your-face-feels-worse-after-drying-towel-friction-check.md  2026-04-09-face-towel-vs-bath-towel-acne-prone-skin.md  2026-04-09-should-i-use-a-new-towel-every-day-if-i-have-acne-prone-skin.md  2026-04-10-can-a-bath-towel-irritate-sensitive-facial-skin.md  2026-04-12-can-a-rough-towel-make-acne-worse.md  (+18 more)
data/: approved_facts.md  automation_settings.yaml  brand_brief.md  keyword_clusters.yaml  notion_state.yaml  pipeline.yaml  style_guide.md  topic_history.yaml  visibility_prompts.yaml
prompts/: article_writer_prompt.md  system_prompt.md  topic_planner_prompt.md
scripts/: build-ui.mjs  debug-ui.mjs  dev-full.mjs  dev-ui.mjs  serve-dist.mjs
sql/: supabase_blog_entries.sql
tests/: __init__.py  test_agent.py  test_api.py  test_automation.py  test_notion_repo.py  test_provider.py  test_storage.py
(+38 files in other folders)
